fixed text alignment, font, outline color and border radius of add new car form

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -122,4 +122,18 @@ section.register {
   padding: 50px 0px 15px 0px;
 }
 
+form{
+  font-family: disco;
+  border-radius: 3px;
+}
+
+input{
+  outline-color: #2D3142;
+  text-align: center;
+  border-radius: 5px; 
+}
+
+
+
+
 
